statum-macros/tests/ui/invalid_transition_unknown_return_state.stderr
error: Error: transition method `to_ghost` returns state `Ghost`, but `Ghost` is not a variant of `#[state]` enum `State`.
       Valid next states for `Machine` are: A, B.
  --> tests/ui/invalid_transition_unknown_return_state.rs:21:5
   |
21 |     fn to_ghost(self) -> Machine<Ghost> {
   |     ^^
